# miniprogram/services/api.js
@@ -93,6 +93,8 @@ function createBackendApi(options = {}) {
     getManifest:(pieceId, contentVersion) => get('/pieces/' + encodeURIComponent(pieceId) + '/manifest', { contentVersion }),
     submitQuiz:attempt => post('/me/quiz-attempts', quizPayload(attempt), attempt.attemptId),
     localImport:request => post('/me/local-import', request, request.snapshotId),
+    progressSync:request => post('/me/progress/sync', request, request.batchId),
+    savedWordSync:request => post('/me/words/sync', request, request.batchId),
     rankingOptions:() => get('/ranking-options'),
     rankings:filters => get('/rankings', rankingQuery(filters)),
     rankingDetail:(participantId, filters) => get('/rankings/' + encodeURIComponent(participantId) + '/quizzes', rankingQuery(filters)),
@@ -167,6 +169,8 @@ module.exports = {
   getManifest:(pieceId, version) => active().getManifest(pieceId, version),
   submitQuiz:attempt => active().submitQuiz(attempt),
   localImport:request => active().localImport(request),
+  progressSync:request => active().progressSync(request),
+  savedWordSync:request => active().savedWordSync(request),
   rankingOptions:() => active().rankingOptions(),
   rankings:filters => active().rankings(filters),
   rankingDetail:(participantId, filters) => active().rankingDetail(participantId, filters)
